k8s/my-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uday-petclinic-deployv3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-petclinicv3
  template:
    metadata:
      labels:
        app: my-petclinicv3
    spec:
      containers:
        - name: petclinic-container
          image: udayparthananda/spring-petclinic:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: uday-petclinic-svc
  labels:
    app: my-clinic-service
spec:
  type: ClusterIP
  selector:
    app: my-petclinicv3
  ports:
    - name: web-metrics
      port: 8087
      targetPort: 8082
    
    
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uday-petclinic-ingressv3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: my-petclinic
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uday-petclinic-svc
                port:
                  number: 8087
